--- a/nlp/templates/nlp/summary.html
+++ b/nlp/templates/nlp/summary.html
@@ -22,6 +22,9 @@
                 <p>{{ summary }}</p>
                 <!-- You can customize the display of the summary as needed -->
             </div>
+            <div class="card-footer">
+                <a href="{% url 'summarize' %}" class="btn btn-primary">Go Back</a>
+            </div>
         </div>
     </div>
 
